src/components/website/mapApp/MapAppHeader.scss
.map-app-header {
    width: 100%;

    padding-bottom: 20px;

    display: flex;
    flex-direction: row;
    justify-content: space-between;

    .map-app-header-block {
        max-height: 46px;

        background-color: #000000;

        padding: 13px 20px;

        border: 1px solid #454545;
        border-radius: 10px;

        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-between;
        gap: 20px;
    }

    .map-app-header-brand-logo {
        height: 20px;
        width: 20px;
    }

    .map-app-header-brand-text {
        font-size: 20px;
        font-weight: 500;
        line-height: 19px;
        color: #FFFFFF;
    }

    .map-app-header-inner-block {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        gap: 8px;
    }

    .map-app-header-account-image {
        height: 100%;
        width: 100%;
    }

    .map-app-header-account-text {
        font-size: 14px;
        font-weight: 500;
        line-height: 17px;

        color: #FFFFFF;

        text-decoration: underline;
    }
}

